New post: iSight in 2025. Images.

--- a/_posts/2025-12-18-isight-in-2025.md
+++ b/_posts/2025-12-18-isight-in-2025.md
@@ -341,3 +341,8 @@ EOF
 
 chmod +x ~/isight-autostart.sh
 {% endhighlight %}
+
+# Proof of it
+Here you have it!
+
+![A happy user](/content/images/2025-12-18-isight-in-2025/google-meet-isight.png)
